cogito-scaffold: sostituisci List.getFirst() con get(0) per compatibilita JDK 17+